objects/LogMessage__c.object
<CustomObject>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From_Email__c</fullName>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <label>Process Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>StackTrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tracking_History__c</fullName>
        <label>Tracking History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LogMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Log Message</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>LogMessage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>